RESOLVED FIXED275984
MediaPlayerPrivateRemote does not need to be an IPC::MessageReceiver
https://bugs.webkit.org/show_bug.cgi?id=275984
Summary MediaPlayerPrivateRemote does not need to be an IPC::MessageReceiver
youenn fablet
Reported 2024-06-28 05:15:22 PDT
MediaPlayerPrivateRemote does not need to be an IPC::MessageReceiver
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-28 05:17:37 PDT
youenn fablet
Comment 2 2024-06-28 05:19:59 PDT
EWS
Comment 3 2024-06-28 11:27:55 PDT
Committed 280462@main (28a15960cf15): <https://commits.webkit.org/280462@main> Reviewed commits have been landed. Closing PR #30265 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.