MediaPlayerPrivateRemote does not need to be an IPC::MessageReceiver https://bugs.webkit.org/show_bug.cgi?id=275984 rdar://problem/130748477

Reviewed by Chris Dumez.

* Source/WebKit/WebProcess/GPU/media/MediaPlayerPrivateRemote.h:

Canonical link: https://commits.webkit.org/280462@main